# task_manager_fastapi

./: .gitignore  README.md  pyproject.toml
fast_zero/: databse.db  pyproject.toml
fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/migrations/versions/: 755aefc6561e_inclusão_do_updated_at_na_users.py  96964419b7b2_exercicio_02_aula_04.py  b3261fed938a_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py  test_security.py
