[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["mourayago <moura.yagoibmec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
